# rca-data-tools

./: .gitignore  Dockerfile  README.md  prefect.yaml  pyproject.toml  widedf.csv
.ci/: environment.yaml
.github/workflows/: main.yaml  trigger-data-vent-build.yaml
rca_data_tools/qaqc/: calculate.py  constants.py  dashboard.py  decimate.py  discrete.py  flow.py  index.py  notes.py  pipeline.py  plots.py  qartod.py  utils.py  visual_data.py
rca_data_tools/qaqc/advanced_qaqc/: calculateFunctions.py
rca_data_tools/qaqc/params/: archiveDictionary.csv  calculateCalls.csv  calculateParameters.csv  calculateStrings.csv  compute_exceptions.yaml  deployedRanges.csv  discreteMap.csv  discreteSummary_template.csv  eventPresets.csv  inheritance.yaml  localRanges.csv  localRanges.yaml  localRanges_TOREMOVE.csv  maxCoordinateSizes.csv  plotParameters.csv  qartod_skip.yaml  siteCalculations.csv  sitesDictionary.csv  stage2Dictionary.csv  stage3Dictionary.csv  variableMap.csv  variableParameters.csv
tests/: test_basic.py  test_plotProfilesScatter.py
tests/toy_data/: PCO2WA101_overlayData_anno.pickle  PCO2WA101_overlayData_clim.pickle  PCO2WA101_overlayData_flag.nc  PCO2WA101_paramData.nc
